# socket_share_mem

./: README.md  dz_communicator.cc  dz_communicator.h
demo/client/: CMakeLists.txt  main_client.cc
demo/server/: CMakeLists.txt  main_server.cc
